almost working jar
on windows it's complainng about classpath

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.1.0)
 project(MinimalAndroidVR VERSION 1.0.0)
 
+find_package(Java 1.8 REQUIRED)
+include(UseJava)
+
 get_filename_component(ANDROID_SDK "${ANDROID_NDK}/.." ABSOLUTE)
 file(TO_CMAKE_PATH "${ANDROID_SDK}" ANDROID_SDK)
 set(ANDROID_GLUE "${ANDROID_NDK}/sources/android/native_app_glue")
@@ -9,3 +12,11 @@ link_directories("deps/ovr_sdk_mobile/VrApi/Libs/Android/${ANDROID_ABI}/${CMAKE_
 include_directories("deps/ovr_sdk_mobile/VrApi/Include" "${ANDROID_GLUE}")
 add_library(app SHARED main.c "${ANDROID_GLUE}/android_native_app_glue.c")
 target_link_libraries(app android vrapi log GLESv3 egl)
+
+add_jar(minimalvr
+    SOURCES
+        "org/lovr/mini/LoadLibraries.java"
+        "AndroidManifest.xml"
+        $<TARGET_FILE:app>
+    INCLUDE_JARS "${ANDROID_SDK}/platforms/android-${ANDROID_PLATFORM}/android.jar"
+)
