unaligned apk works
albeit with some horrible hard-codings :(

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,8 +44,8 @@ function(add_apk _TARGET_NAME)
     foreach (JAVA_INCLUDE_DIR IN LISTS CMAKE_JAVA_INCLUDE_PATH)
         string(APPEND CMAKE_JAVA_INCLUDE_PATH_FINAL "${CMAKE_JAVA_INCLUDE_FLAG_SEP}${JAVA_INCLUDE_DIR}")
     endforeach()
-
-    set(CMAKE_JAVA_CLASS_OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${_TARGET_NAME}.dir")
+    set(_APK_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${_TARGET_NAME}.dir")
+    set(_APK_STAGE "${_APK_BUILD_DIR}/stage")
 
     set(_JAVA_CLASS_FILES)
     set(_JAVA_COMPILE_FILES)
@@ -57,19 +57,21 @@ function(add_apk _TARGET_NAME)
         get_filename_component(_JAVA_REL_PATH ${_JAVA_REL_PATH} PATH)
 
         list(APPEND _JAVA_COMPILE_FILES ${_JAVA_SOURCE_FILE})
-        set(_JAVA_CLASS_FILE "${CMAKE_JAVA_CLASS_OUTPUT_PATH}/${_JAVA_REL_PATH}/${_JAVA_FILE}.class")
+        set(_JAVA_CLASS_FILE "${_APK_STAGE}/${_JAVA_REL_PATH}/${_JAVA_FILE}.class")
         set(_JAVA_CLASS_FILES ${_JAVA_CLASS_FILES} ${_JAVA_CLASS_FILE})
     endforeach()
 
     # Compile the java files and create a list of class files
     add_custom_command(
-        OUTPUT ${CMAKE_JAVA_CLASS_OUTPUT_PATH}/java_compiled_${_TARGET_NAME}
+        OUTPUT ${_APK_BUILD_DIR}/java_compiled_${_TARGET_NAME}
+        COMMAND ${CMAKE_COMMAND} -E make_directory 
+            "${_APK_STAGE}"
         COMMAND ${Java_JAVAC_EXECUTABLE}
             ${CMAKE_JAVA_COMPILE_FLAGS}
             -classpath "${CMAKE_JAVA_INCLUDE_PATH_FINAL}"
-            -d ${CMAKE_JAVA_CLASS_OUTPUT_PATH}
+            -d ${_APK_BUILD_DIR}
             ${_JAVA_COMPILE_FILES}
-        COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_JAVA_CLASS_OUTPUT_PATH}/java_compiled_${_TARGET_NAME}
+        COMMAND ${CMAKE_COMMAND} -E touch ${_APK_BUILD_DIR}/java_compiled_${_TARGET_NAME}
         DEPENDS ${_JAVA_COMPILE_FILES} ${CMAKE_JAVA_INCLUDE_PATH}
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "Building Java objects for ${_TARGET_NAME}.apk"
@@ -78,37 +80,39 @@ function(add_apk _TARGET_NAME)
 
     # Create dex file
     add_custom_command(
-        OUTPUT ${CMAKE_JAVA_CLASS_OUTPUT_PATH}/classes.dex
+        OUTPUT ${_APK_STAGE}/classes.dex
         COMMAND ${ANDROID_DEX} 
             --dex
-            --output=${CMAKE_JAVA_CLASS_OUTPUT_PATH}/classes.dex
-            ${CMAKE_JAVA_CLASS_OUTPUT_PATH}
-        DEPENDS ${CMAKE_JAVA_CLASS_OUTPUT_PATH}/java_compiled_${_TARGET_NAME}
-        WORKING_DIRECTORY ${CMAKE_JAVA_CLASS_OUTPUT_PATH}
+            --output=${_APK_STAGE}/classes.dex
+            ${_APK_BUILD_DIR}
+        DEPENDS ${_APK_BUILD_DIR}/java_compiled_${_TARGET_NAME}
+        WORKING_DIRECTORY ${_APK_BUILD_DIR}
         COMMENT "Compiling DEX for ${_TARGET_NAME}.apk"
         VERBATIM
     )
 
     # Create unaligned apk
     add_custom_command(
-        OUTPUT ${CMAKE_JAVA_CLASS_OUTPUT_PATH}/${_TARGET_NAME}.unaligned.apk
+        OUTPUT ${_APK_BUILD_DIR}/${_TARGET_NAME}.unaligned.apk
+        COMMAND ${CMAKE_COMMAND} -E copy
+            ${_add_apk_RESOURCES} ${_APK_STAGE}
         COMMAND ${ANDROID_AAPT} 
             package
             -M ${CMAKE_CURRENT_SOURCE_DIR}/${_add_apk_MANIFEST}
             -I ${_add_apk_INCLUDE_JARS}
-            -F ${CMAKE_JAVA_CLASS_OUTPUT_PATH}/${_TARGET_NAME}.unaligned.apk
+            -F ${_APK_BUILD_DIR}/${_TARGET_NAME}.unaligned.apk
         COMMAND ${ANDROID_AAPT} 
             add
-            -f ${CMAKE_JAVA_CLASS_OUTPUT_PATH}/${_TARGET_NAME}.unaligned.apk
+            -f ${_APK_BUILD_DIR}/${_TARGET_NAME}.unaligned.apk
             classes.dex
-            ${_add_apk_RESOURCES}
-        DEPENDS ${CMAKE_JAVA_CLASS_OUTPUT_PATH}/classes.dex
-        WORKING_DIRECTORY ${CMAKE_JAVA_CLASS_OUTPUT_PATH}
+            libapp.so
+        DEPENDS ${_APK_STAGE}/classes.dex
+        WORKING_DIRECTORY ${_APK_STAGE}
         COMMENT "Packaging unaligned APK for ${_TARGET_NAME}.apk"
         VERBATIM
     )
 
-    add_custom_target(${_TARGET_NAME} ALL DEPENDS ${CMAKE_JAVA_CLASS_OUTPUT_PATH}/${_TARGET_NAME}.unaligned.apk)
+    add_custom_target(${_TARGET_NAME} ALL DEPENDS ${_APK_BUILD_DIR}/${_TARGET_NAME}.unaligned.apk)
 
 endfunction()
 
